# fundamentalis-rs

./: .gitignore  Cargo.toml  README.md
concurrency/async-future/: Cargo.toml
concurrency/async-future/src/: main.rs
concurrency/cpubound/: Cargo.toml  README.md
concurrency/cpubound/src/: main.rs
concurrency/cron-job-tokio/: Cargo.toml
concurrency/cron-job-tokio/src/: main.rs
concurrency/fetch-metrics/: Cargo.toml
concurrency/fetch-metrics/src/: main.rs
concurrency/prometheus/: Cargo.toml
concurrency/prometheus/src/: command.rs  fetch_metrics.rs  main.rs  metrics.rs
concurrency/stream/: Cargo.toml  README.md
concurrency/stream/src/: main.rs
data/bit/: Cargo.toml
data/bit/src/: main.rs
data/blist/: Cargo.toml
data/const-arrayvec/: Cargo.toml
data/const-arrayvec/src/: lib.rs
data/grid/: Cargo.toml
data/grid/src/: bit.rs  lib.rs  main.rs  matrix1d.rs  matrix2d.rs
data/iter/src/: main.rs
data/linked-list/src/: lib.rs
data/recursive-iter/: Cargo.toml
data/recursive-iter/src/: main.rs
data/traverse/src/: ext.rs  lib.rs
ffi/my_lib/: Cargo.toml  READMD.md
ffi/my_lib/src/: lib.rs
futures/: README.md
futures/my_yield/: Cargo.toml
futures/my_yield/src/: main.rs
futures/trait_object/src/: main.rs
futures/type_sizes/: Cargo.toml
futures/type_sizes/src/: main.rs
io/file-read/src/: main.rs
io/grpc-cli-srv/: Cargo.toml  build.rs
io/grpc-cli-srv/proto/: cli.proto
io/grpc-cli-srv/src/: main.rs
io/grpc-cli-srv/src/remotecli/: client.rs  server.rs
io/http-client/: Cargo.toml
iter/iter_recursive/: Cargo.toml  README.md
iter/iter_recursive/src/: main.rs
lazyness/static_lazy/: Cargo.toml
lazyness/static_lazy/src/: lib.rs
macro/: Cargo.toml  README.md  main.rs
macro/builder/: Cargo.toml
macro/builder/src/: lib.rs
macro/builder/tests/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  progress.rs
mem/allocator/: Cargo.toml  README.md  events.ldjson
mem/allocator/src/: alloc.rs  main.rs  report.rs  sample.rs
mem/borrow/: README.md
mem/borrow/src/: asref.rs  borrow.rs  cow.rs  deref.rs  lib.rs
mem/cow/: README.md
mem/cow/src/: main.rs
mem/myvec/src/: lib.rs  main.rs
mem/pointers/src/: main.rs
mem/smallstr/: Cargo.toml
mem/smallstr/src/: main.rs
mem/smart-pointers/src/: main.rs
services/router/: Cargo.toml
services/router/src/: main.rs
services/static-site-generator/: Cargo.toml
services/static-site-generator/content/: hello-world.md
services/static-site-generator/public/: hello-world.html
services/static-site-generator/src/: main.rs  templates.rs
tagless/typed-tagless/: Cargo.toml  README.md
tagless/typed-tagless/src/: final_style.rs  final_style_2.rs  initial_style.rs  lib.rs
tagless/typestate-pattern/: README.md
tagless/typestate-pattern/src/: lib.rs
utils/cargo-sln/: Cargo.toml
utils/cargo-sln/src/: main.rs
utils/format/src/: main.rs
utils/logging/: Cargo.toml
utils/logging-custom/: Cargo.toml
utils/logging-custom/src/: main.rs
utils/logging-stdout/: Cargo.toml
utils/logging-stdout/src/: main.rs
utils/logging-syslog/: Cargo.toml
utils/logging-syslog/src/: main.rs
utils/logging/src/: main.rs
utils/os-type/: Cargo.toml
utils/os-type/src/: main.rs  sw_vers.rs
utils/otel_instrumentation/: Cargo.toml
utils/otel_instrumentation/src/: main.rs
utils/slice-patterns/: Cargo.toml
utils/slice-patterns/src/: main.rs
utils/trace/: Cargo.toml
utils/trace/src/: main.rs  yak_shave.rs
utils/trying/: Cargo.toml
utils/trying/src/: lib.rs
