[workspace]

members = [
    "./concurrency/stream",
    "./concurrency/cpubound",
    "./concurrency/cron-job-tokio",
    "./concurrency/fetch-metrics",
    "./concurrency/prometheus",
    "./data/bit",
    "./data/iter",
    "./data/blist",
    "./data/const-arrayvec",
    "./data/grid",
    "./data/linked-list",
    "./data/traverse",
    "./io/file-read",
    "./mem/myvec",
    "./mem/pointers",
    "./mem/smart-pointers",
    "./io/http-client",
    "./io/grpc-cli-srv",
    "./services/static-site-generator",
    "./utils/format",
    "./utils/logging",
    "./utils/logging-stdout",
    "./utils/logging-custom",
    "./utils/logging-syslog",
    "./utils/os-type",
    "./utils/otel_instrumentation",
    "./utils/slice-patterns",
    "./utils/trace",
]
