[workspace]

members = [
    "./concurrency/async-future",
    "./concurrency/stream",
    "./concurrency/cpubound",
    "./concurrency/fetch-metrics",
    "./concurrency/prometheus",
    "./data/bit",
    "./data/iter",
    "./data/blist",
    "./data/const-arrayvec",
    "./data/grid",
    "./data/linked-list",
    "./data/recursive-iter",
    "./data/traverse",
    "./io/file-read",
    "./macro/builder",
    "./mem/allocator",
    "./mem/myvec",
    "./mem/pointers",
    "./mem/smallstr",
    "./mem/smart-pointers",
    "./mem/cow",
    "./io/http-client",
    "./io/grpc-cli-srv",
    "./services/router",
    "./services/static-site-generator",
    "./utils/cargo-sln",
    "./utils/format",
    "./utils/logging",
    "./utils/logging-stdout",
    "./utils/logging-custom",
    "./utils/logging-syslog",
    "./utils/os-type",
    "./utils/otel_instrumentation",
    "./utils/slice-patterns",
    "./utils/trace",
    "./utils/trying",
]
