[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.69", features = ["diff"] }

[dependencies]
syn = {version = "1.0.102", features = ["extra-traits"]}
quote = "1.0.21"
proc-macro2 = "1.0.46"