[package]
name = "allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
bytesize = "1.1"
textplots = "0.8"
