[package]
name = "otel_instrumentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = {version = "0.17", features = ["serialize", "rt-tokio"]}
opentelemetry-jaeger = {version = "0.16", features = ["rt-tokio"]}
tokio = {version = "1.0", features = ["full"]}